<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.zendynamix.movieworld.DetailActivityFragment"
        tools:showIn="@layout/activity_detail">


        <TextView
            android:id="@+id/dMovie_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dMovie_poster"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:scaleType="centerCrop"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/rating_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16sp"
                    android:text="@string/Rating"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/dMovie_ratingt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Rating"
                    android:textColor="@color/dim_grey"
                    android:textSize="14sp"/>

                <RatingBar
                    android:id="@+id/dMovie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:layout_marginRight="10dp"
                    android:nestedScrollingEnabled="false"
                    android:numStars="4"
                    android:rating="2.0"
                    android:stepSize="1.0"
                    />

                <TextView
                    android:id="@+id/released_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="14dp"
                    android:text="Released on"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/dMovie_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="14dp"
                    android:layout_weight="0.15"
                    android:gravity="center_vertical"
                    android:text="@string/date"
                    android:textColor="@color/dim_grey"
                    android:textSize="14sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/review_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/Review"
                android:layout_marginStart="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_marginTop="2dp"
                android:id="@+id/dMovie_review"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:maxLength="350"
                android:maxLines="5"
                android:scrollbarStyle="insideInset"
                android:text="@string/review"
                android:textColor="@color/dim_grey"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>


</ScrollView>




